# library

./: .gitignore  CMakeLists.txt  Doxyfile.in  Doxygen.cmake  Macros.cmake  README.md  index.html
config/: Doxyfile.in  Macros.cmake  (+3 more)
examples/: CMakeLists.txt
examples/q0_basics/: CMakeLists.txt
examples/q0_basics/src/RAII/: main.cpp
examples/q0_basics/src/advanced/: main.cpp
examples/q0_basics/src/console/: main.cpp
examples/q0_basics/src/containers/: main.cpp
examples/q0_basics/src/namespaces/: bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
examples/q10_condition_variable/: CMakeLists.txt
examples/q10_event/: CMakeLists.txt
examples/q11_event/: CMakeLists.txt
examples/q11_timer/: CMakeLists.txt
examples/q12_rendezvous/: CMakeLists.txt
examples/q13_monitor/: CMakeLists.txt
examples/q13_timer/: CMakeLists.txt
examples/q14_monitor/: CMakeLists.txt
examples/q14_reader_writer/: CMakeLists.txt
examples/q15_producer_consumer/: CMakeLists.txt
examples/q15_producer_consumer/src/: CookieQueue.h  baker.cpp  bakery.cpp  cookie_monster.cpp
examples/q16_sleeping_barber/: CMakeLists.txt
examples/q16_sleeping_barber/src/: barber_shop.cpp  sleeping_barbers.cpp
examples/q17_dining_philosophers/: CMakeLists.txt
examples/q17_dining_philosophers/src/: Fork.h  Philosopher.h  dining_livelock.cpp  dining_solution_ordered.cpp  dining_solution_timing.cpp
examples/q17_sleeping_barber/: CMakeLists.txt
examples/q17_sleeping_barber/src/: BarberShop.h  barber.cpp  barber_shop.cpp  customer.cpp  sleeping_barbers.cpp
examples/q18_dining_philosophers/: CMakeLists.txt
examples/q18_dining_philosophers/src/: dining_deadlock.cpp  dining_livelock.cpp  dining_solution_ordered.cpp  dining_solution_timing.cpp
examples/q18_socket/: CMakeLists.txt
examples/q18_socket/src/: posix.cpp  windows.cpp
examples/q1_threads/: CMakeLists.txt
examples/q2_processes/: CMakeLists.txt
examples/q2_processes/src/: child1.cpp  child2.cpp  child3.cpp  child4.cpp  parent.cpp
examples/q3_datapools/: CMakeLists.txt
examples/q3_shared_memory/: CMakeLists.txt
examples/q4_pipe/: CMakeLists.txt
examples/q4_pipes/: CMakeLists.txt
examples/q5_message_queue/: CMakeLists.txt
examples/q5_message_queue/src/: parent.cpp  penpal.cpp
examples/q5_message_queues/: CMakeLists.txt
examples/q5_message_queues/src/: common.h  parent.cpp  penpal.cpp
examples/q6_mutex/: CMakeLists.txt
examples/q6_socket/: CMakeLists.txt
examples/q6_socket/src/: socket.cpp
examples/q6_sockets/: CMakeLists.txt
examples/q6_sockets/src/: socket.cpp
examples/q7_mutex/: CMakeLists.txt
examples/q7_semaphore/: CMakeLists.txt
examples/q8_condition/: CMakeLists.txt
examples/q9_condition/: CMakeLists.txt
examples/q9_condition_variable/: CMakeLists.txt
q0_basics/: CMakeLists.txt
q0_basics/src/advanced/: main.cpp
q0_basics/src/console/: main.cpp
q0_basics/src/containers/: main.cpp
q0_basics/src/namespaces/: bar.h  foo.cpp  foo.h  main.cpp
q0_basics/src/objects/: Dog.cpp
q0_basics/src/templates/: main.cpp
q10_event/: CMakeLists.txt
q10_event/src/process/: factory.h  production_line.cpp  robot.cpp
q10_event/src/thread/: factory.cpp
q10_messagequeues/: CMakeLists.txt
q10_messagequeues/src/: PenPal.cpp  common.h  main.cpp
q10_timer/: CMakeLists.txt
q10_timer/src/: timer.cpp
q11_timer/: CMakeLists.txt
q11_timer/src/process/: faucet.cpp  house.cpp
q11_timer/src/simple/: timer.cpp
q12_monitor/: CMakeLists.txt
q12_monitor/src/: BankAccount.h  child.cpp
q12_rendezvous/: CMakeLists.txt
q12_rendezvous/src/process/: person.cpp  roller_coaster.cpp
q12_rendezvous/src/thread/: roller_coaster.cpp
q13_monitor/: CMakeLists.txt
q13_monitor/src/process/: BankAccount.h  child.cpp
q13_monitor/src/thread/: BankAccount.h
q13_readerwriter/: CMakeLists.txt
q13_readerwriter/src/process/: read_priority.cpp
q13_readerwriter/src/thread/: fair_priority.cpp  write_priority.cpp
q14_producerconsumer/: CMakeLists.txt
q14_producerconsumer/src/: Baker.cpp  CookieMonster.cpp
q14_reader_writer/: CMakeLists.txt
q14_reader_writer/src/process/: fair_priority.cpp  read_priority.cpp  write_priority.cpp
q14_reader_writer/src/thread/: fair_priority.cpp  read_priority.cpp  write_priority.cpp
q15_producer_consumer/: CMakeLists.txt
q15_producer_consumer/src/: cookie_monster.cpp
q15_sleepingbarber/: CMakeLists.txt
q15_sleepingbarber/src/: main.cpp
q16_diningphilosophers/: CMakeLists.txt
q16_diningphilosophers/src/: Fork.h  Philosopher.h  dining_deadlock.cpp  dining_livelock.cpp  dining_solution_timing.cpp
q16_sleeping_barber/: CMakeLists.txt
q16_sleeping_barber/src/: BarberShop.h  barber_shop.cpp  customer.cpp  sleeping_barbers.cpp
q17_dining_philosophers/: CMakeLists.txt
q17_dining_philosophers/src/: Fork.h  dining_deadlock.cpp  dining_solution_ordered.cpp  dining_solution_timing.cpp
q1_multiprocess/: CMakeLists.txt
q1_multiprocess/src/: q1child2.cpp  q1parent.cpp
q1_multithread/: CMakeLists.txt
q1_multithread/src/: q1threads1.cpp  q1threads2.cpp
q1_threads/: CMakeLists.txt
q1_threads/src/objectoriented/: main.cpp
q2_processes/: CMakeLists.txt
q2_processes/src/: child3.cpp  parent.cpp
q2_thread_oo/: CMakeLists.txt
q2_thread_oo/src/: q2classthreads.cpp  q2threadoo.cpp
q3_datapools/: CMakeLists.txt
q3_datapools/src/: q3child1.cpp  q3child2.cpp  q3parent1.cpp  q3parent2.cpp  q3thread.cpp
q3_datapools/src/process/: child.cpp  parent.cpp
q3_datapools/src/thread/: main.cpp
q4_pipelines/: CMakeLists.txt
q4_pipelines/src/multiple/: child.cpp  common.h  parent_poll.cpp  parent_threads.cpp
q4_pipelines/src/single/: child.cpp  common.h  parent.cpp
q5_message_queues/: CMakeLists.txt
q5_message_queues/src/: common.h  parent.cpp
q6_mutex/: CMakeLists.txt
q6_mutex/src/process/: child_safe.cpp  child_unsafe.cpp  common.h
q6_mutex/src/thread/: main.cpp
q6_rendezvous/: CMakeLists.txt
q6_timer/: CMakeLists.txt
q6_timer/src/: timer.cpp
q7_multipipe/: CMakeLists.txt
q7_multipipe/src/: child.cpp  common.h  parent_poll.cpp  parent_threads.cpp
(+710 files in other folders)
